fix: ajustando o obter do produto
